--- a/components/video-content/video-content.wxml
+++ b/components/video-content/video-content.wxml
@@ -1,5 +1,5 @@
 <view class="video-content">
-  <video id="index_{{ indexId }}" controls src="{{ item.video_src }}" poster="{{ item.image }}" bindplay="bindPlay">
+  <video id="index_{{ indexId }}" controls src="{{ item.video_src }}" poster="{{ item.image }}" bindplay="bindVideoPlay">
     <!--<cover-view class="controls">
       <cover-image class="cover-image" src="{{ item.image }}"/>
     </cover-view>-->
