--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
-<scroll-view class="container" scroll-y="true">
+<view class="container">
   <view wx:for="{{video_data}}" wx:key="{{ index }}" class="video_content">
     <video-content item="{{ item }}" indexId="{{ index }}" videoLengh="{{ video_data.length }}" needNavigate="true"/>
   </view>
-</scroll-view>
+</view>
