--- a/components/video-content/video-content.wxml
+++ b/components/video-content/video-content.wxml
@@ -1,9 +1,5 @@
 <view class="video-content">
-  <video id="index_{{ indexId }}" controls src="{{ item.video_src }}" poster="{{ item.image }}" bindplay="bindVideoPlay">
-    <!--<cover-view class="controls">
-      <cover-image class="cover-image" src="{{ item.image }}"/>
-    </cover-view>-->
-  </video>
+  <video id="index_{{ indexId }}" controls src="{{ item.video_src }}" bindplay="bindVideoPlay" />
 
   <view class="content-info">
     <view class="item-title">
