--- a/pages/contentPage/contentPage.wxml
+++ b/pages/contentPage/contentPage.wxml
@@ -6,7 +6,9 @@
 
     <scroll-view scroll-x style="width: 100%" scroll-with-animation="true" class="recommend-scroll-box">
       <view class="recommend-video" wx:for="{{ recommendData }}" wx:key="{{ index }}" data-videoid="{{ item.id }}" bindtap="goContentView">
-        <image src="{{ item.image }}"/>
+        <view class="recommend-image-wrapper">
+          <image src="{{ item.image }}" mode="widthFix"/>
+        </view>
         <p class="recommend-title">{{ item.title }}</p>
       </view>
     </scroll-view>
