--- a/components/video-content/video-content.wxss
+++ b/components/video-content/video-content.wxss
@@ -50,6 +50,22 @@
   left: 0;
 }
 
+.video-content .video-poster{
+  width: 750rpx;
+  height: 421.8rpx;
+  background-color: #000;
+  display: flex;
+  z-index: 9999;
+  position: absolute;
+  left: 0;
+  align-items: center;
+}
+
+.video-content .video-poster image {
+  flex: 1;
+  width: 100%;
+}
+
 /**分享icon**/
 .video-content .video_share {
   float: right;
