--- a/pages/contentPage/contentPage.wxss
+++ b/pages/contentPage/contentPage.wxss
@@ -41,6 +41,10 @@
 .content-page .recommend-content .recommend-title {
   display: block;
   font-size: 25rpx;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .content-page .recommend-content .recommend-video {
@@ -49,7 +53,14 @@
   margin-right: 10rpx;
   display: inline-block;
 }
-.content-page .recommend-content .recommend-video image {
-  width: 100%;
-  height: 100%;
+.content-page .recommend-content .recommend-video .recommend-image-wrapper {
+  width: 250rpx;
+  height: 144rpx;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+}
+.content-page .recommend-content .recommend-video .recommend-image-wrapper image {
+  width: 250rpx;
+  flex: 1;
 }
